Sun Jun 22 09:51:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_class_superclass): rdoc improvement, a patch from
	  Gaston Ramos <ramos.gaston AT gmail.com> in [ruby-core:17371].

Sun Jun 22 09:22:32 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* README.EXT: translated README.EXT.ja

Sun Jun 22 00:42:02 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_osid, rb_w32_osver, CreateChild): XP is
	  is different from Vista about pipe handle inheritance.
	  fixed [ruby-core:17367], reported by Lars Christensen <larsch at
	  belunktum.dk>

Sun Jun 22 00:38:45 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* README.EXT.ja: add note about mark and free.

Sun Jun 22 00:01:36 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_binmode_p, argf_binmode_p, Init_IO): new method
	  IO#binmode? and ARGF.binmode?  [ruby-dev:35148]

Sat Jun 21 17:33:50 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn): no longer support P_WAIT.

Sat Jun 21 16:46:09 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread_win32.c (native_sleep): must block reentrance when accessing
	  th->unblock.
	  fixed [ruby-core:17341], reported by Bill Kelly <billk at cts.com>

Sat Jun 21 16:29:02 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (call_args2, open_args): removed.

	* parse.y (parser_yylex): unified warnings at space between method
	  name and argument parenthese.  [ruby-dev:33943]

Sat Jun 21 16:21:07 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_round): get rid of overflow.

Sat Jun 21 15:57:15 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_rb.rb (RDoc#collect_first_comment): skip
	  magic comment.

Sat Jun 21 15:54:55 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check if fork works with pthread.

Sat Jun 21 15:31:09 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot: ported to ruby.

	* tool/make-snapshot: fixed digests.
