@@ -1,3 +1,8 @@
+Sun Jun 22 14:16:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/readline/extconf.rb (have_readline_func): readline on Mac OS X
+	  needs headers to detect some functions.
+
 Sun Jun 22 09:51:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* object.c (rb_class_superclass): rdoc improvement, a patch from
